--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Chatbot using XAI API with Grok integration",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "next start",
+    "dev": "next dev",
+    "build": "next build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "format": "prettier --write ."
@@ -21,14 +22,17 @@
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "next": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
