--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "next": "latest",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
